# Builder

./: CMakeList.txt  CMakeLists.txt  README.txt
fonts/open_sans/: README.txt
src/: CrossSystemFunctions.cpp  CrossSystemFunctions.hpp  GameManager.cpp  GameManager.hpp  cleanup.hpp  main.cpp
src/Drawing/: ClickableObject.cpp  ClickableObject.hpp  ClipArray.cpp  ClipArray.hpp  MultiSprite.cpp  MultiSprite.hpp  Sprite.cpp  Sprite.hpp  TextObject.cpp  TextObject.hpp  TextureObject.cpp  TextureObject.hpp
ubuntu/: README
windows/SDL2/: README.txt
windows/SDL2_Image/: README
windows/SDL2_ttf/: README.txt
